# ae-engine

./: LICENSE  README.md
android/cmake/: CMakeLists.txt
commons/: build-java.xml  build.xml
doc/: AndroidGradleProjects.md  GPUPlugins.md  Libraries.md  PluginXCodeProjectSettings.md  SettingUpAndroidProject.md  SettingUpDevelopmentEnvironment.md  navigation
engine/: Makefile
engine/android/audio/: Android.mk  includes.mk
engine/android/jniutil/: Android.mk  includes.mk
engine/common/: Makefile
engine/desktop/: Makefile
engine/ios/core/src/: NSLogger.mm
engine/ios/sdl2/src/: ae_sdl2_ios.mm
engine/sdl2/: Makefile
ios/ae/ae.xcodeproj/: project.pbxproj
ios/ae/ae.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/ae_sdl2/ae_sdl2/: ae_sdl2.h  ae_sdl2.m
ios/ae_sdl2/ae_sdl2.xcodeproj/: project.pbxproj
ios/ae_sdl2/ae_sdl2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/lpng/lpng.xcodeproj/: project.pbxproj
ios/lua/lua.xcodeproj/: project.pbxproj
ios/sbjson/sbjson.xcodeproj/: project.pbxproj
ios/sbjson/sbjson.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libs/SDL/SDL2-2.0.5/include/: SDL_syswm.bak.h
libs/osx/SDL2-2.0.5/SDL2.framework/: SDL2
libs/osx/lua-5.3.2/include/: luaconf.h
libs/osx/lua-5.3.2/lib/: liblua53.dylib
plugins/adcolony/: build.xml
plugins/adcolony/doc/: AdColonyLuaExtraLib.md
plugins/adcolony/ios/src/: AEiOSLuaLibAdColony.mm
plugins/applovin/: build.xml
plugins/applovin/doc/: AppLovinLuaExtraLib.md
plugins/applovin/ios/src/: AEALInterstitalAdLoadDelegate.mm  AEALInterstitialAdDisplayDelegate.mm  AEiOSLuaLibAppLovin.mm
plugins/chartboost/: build.xml
plugins/chartboost/doc/: ChartboostLuaExtraLib.md
plugins/chartboost/ios/src/: AEChartboostDelegate.mm  AEiOSLuaLibChartboost.mm
plugins/flurry/: build.xml
plugins/flurry/ios/src/: AEiOSLuaLibFlurry.mm
plugins/gameanalytics/: build.xml
plugins/gameanalytics/ios/src/: AEiOSLuaLibGameAnalytics.mm
plugins/gamecenter/: build.xml
plugins/gamecenter/ios/src/: AEGKGameCenterControllerDelegate.mm  AEiOSLuaLibGameCenter.mm
plugins/gles2/: build.xml
plugins/gles2_spine/: build.xml
plugins/gles2_spine/android/src/cmake/: CMakeLists.txt
plugins/gles2_spine/doc/: SpineLuaExtraLib.md  SpineRuntime.md  include-regex
plugins/gpgs/: build.xml
plugins/gpu/: build.xml
plugins/gpu_gles/: build.xml
plugins/gpu_launch/: build.xml
plugins/gpu_launch_gles/: build.xml
plugins/gpu_spine/: build.xml
plugins/gpu_spine/doc/: SpinePlugin.md  SpineRuntime.md
plugins/http/: build.xml
plugins/http/android/src/cmake/: CMakeLists.txt
plugins/http/ios/src/: AENSURLConnectionDelegate.mm  AEiOSLuaLibHTTP.mm
plugins/iap/: build.xml
plugins/iap/android/src/cmake/: CMakeLists.txt
plugins/iap/ios/src/: AEIAPProductsListener.mm  AESKPaymentTransactionObserver.mm  AESKProductsRequestDelegate.mm  AEiOSLuaLibIAP.mm
plugins/sbjson/: build.xml
plugins/tapjoy/: build.xml
plugins/tapjoy/ios/src/: AEiOSLuaLibTapjoy.mm
plugins/ui/: build.xml
plugins/ui_gles/: build.xml
plugins/ui_gpu/: build.xml
plugins/ui_gpu_spine/: build.xml
plugins/unityads/: build.xml
plugins/unityads/doc/: links.md
plugins/unityads/ios/src/: AEUnityAdsDelegate.mm  AEiOSLuaLibUnityAds.mm
plugins/vungle/: build.xml
plugins/vungle/doc/: VungleLuaExtraLib.md
plugins/vungle/ios/src/: AEVungleSDKDelegate.mm  AEiOSLuaLibVungle.mm
studio/: build.xml
studio/core/: build.xml
studio/plugins/: build-plugin.xml
studio/plugins/adb/: build.xml
studio/plugins/ae.dist/: build.xml
studio/plugins/android/: build.xml
studio/plugins/android.explorer/: build.xml
studio/plugins/ant/: build.xml
studio/plugins/appicon/: build.xml
studio/plugins/assets/: build.xml
studio/plugins/assets.fonts/: build.xml
studio/plugins/assets.textures/: build.xml
studio/plugins/builders/: build.xml
studio/plugins/console/: build.xml
studio/plugins/file/: build.xml
studio/plugins/file.explorer/: build.xml
studio/plugins/file.problems/: build.xml
studio/plugins/image.viewer/: build.xml
studio/plugins/ios/: build.xml
studio/plugins/lua/: build.xml
studio/plugins/lua.autocompletion/: build.xml
studio/plugins/lua.classes/: build.xml
studio/plugins/lua.compiler/: build.xml
studio/plugins/lua.debug/: build.xml
studio/plugins/lua.editor/: build.xml
studio/plugins/lua.explorer/: build.xml
studio/plugins/lua.lib/: build.xml
studio/plugins/lua.parser/: build.xml
studio/plugins/lua.templates/: build.xml
studio/plugins/lua.test/: build.xml
studio/plugins/lua.wizards/: build.xml
studio/plugins/outline/: build.xml
studio/plugins/problems/: build.xml
studio/plugins/project/: build.xml
studio/plugins/project.ant/: build.xml
studio/plugins/project.explorer/: build.xml
studio/plugins/project.files/: build.xml
studio/plugins/project.resources/: build.xml
studio/plugins/project.select/: build.xml
studio/plugins/resources/: build.xml
studio/plugins/search/: build.xml
studio/plugins/search.common/: build.xml
studio/plugins/simulator/: build.xml
studio/plugins/simulator.resources/: build.xml
studio/plugins/splash/: build.xml
studio/plugins/text.editor/: build.xml
studio/plugins/todo/: build.xml
studio/plugins/ui.common/: build.xml
studio/plugins/ui.icons/: build.xml
studio/plugins/ui.init/: build.xml
studio/plugins/ui.main/: build.xml
studio/plugins/ui.main.finalizer/: build.xml
studio/plugins/wizards/: build.xml
studio/resources/icons/add/: deco_add.xcf
studio/resources/icons/android/: link
studio/resources/icons/apple/: apple.xcf  link
studio/resources/icons/collapse/: collapse.xcf
studio/resources/icons/empty/: empty.xcf
studio/resources/icons/expand/: expand.xcf
studio/resources/icons/test/: test.xcf
studio/resources/logo/: logo.xcf
studio/resources/splash/: splash.xcf
templates/android/project/: build.gradle.vm  local.properties.vm
templates/plugin/: build.xml
templates/project/: ae.properties  build.xml
templates/project/tools/: build.xml
tools/: build.xml
(+2442 files in other folders)
